--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ h3,
 p,
 li {
     color: green;
+    list-style-type: none;
 }
 
 img {
@@ -30,6 +31,7 @@ main {
 nav {
     background-color: beige;
     padding: 10px;
+    width: 100%;
 }
 
 nav ul {
